<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <View
        android:id="@+id/vStatus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:background="@color/transparent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@+id/vStatus"
        android:src="@drawable/iv_cover"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cover">

        <LinearLayout
            android:id="@+id/linearLayoutCam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:layout_above="@id/llMore"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/iProfile"
                android:layout_width="0dp"
                android:layout_height="@dimen/_75sdp"
                android:layout_weight="1"
                android:layout_margin="0.5dp"
                android:clickable="true"
                android:background="#A07EFF"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:padding="@dimen/_9sdp"
                    android:src="@drawable/ic_profile"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/frame"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iPattern"
                android:layout_width="0dp"
                android:layout_height="@dimen/_75sdp"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_margin="0.5dp"
                android:background="#FF7777"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_deg"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/pattern"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iDrip"
                android:layout_width="0dp"
                android:layout_height="@dimen/_75sdp"
                android:layout_weight="1"
                android:background="#434343"
                android:layout_margin="0.5dp"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_art"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/drip"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iWorks"
                android:layout_width="0dp"
                android:layout_height="@dimen/_75sdp"
                android:background="#A5EF4F"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/iv_works" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/works"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8sdp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_round"
            android:layout_margin="@dimen/_7sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_9sdp">

            <LinearLayout
                android:id="@+id/iShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/bg_border"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/ic_share"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/bg_border"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/ic_rate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/rate_us"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iPrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/bg_border"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/ic_privacy"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iFeedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/bg_border"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/ic_feedback"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/feedback"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/bg_border"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_others"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/apps"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sdp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>