<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogShow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp">

    <xProfile.dpMaker.aiPhoto.removeBg.photoEditorPro.views.CornerLayout
        android:id="@+id/refresh_button_container"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        app:Radius="@dimen/_15sdp"
        app:iBackground="@color/BackgroundColor"
        app:StrokeColor="@color/lineColor"
        app:StrokeWidth="@dimen/_2sdp"
        app:iBorderColor="@color/transparent"
        android:layout_centerInParent="true">

    <LinearLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_9sdp">


        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textSize="@dimen/_9sdp"
            android:textAllCaps="true"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:text="@string/internet_dialog"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/iconColor"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"/>


        <TextView
            android:id="@+id/tvRetry"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/mainColor"
            android:gravity="center"
            android:text="@string/retry"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    </xProfile.dpMaker.aiPhoto.removeBg.photoEditorPro.views.CornerLayout>



</RelativeLayout>